--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Tdd exercise",
   "main": "index.js",
   "scripts": {
-    "test": "tape ./test/*.test.js"
-	"istanbul cover tape ./test/*.test.js"
+    "test": [
+      "tape ./test/*.test.js",
+      "istanbul cover tape ./test/*.test.js"
+    ]
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "browserify": "^16.2.2",
     "istanbul": "^0.4.5",
     "tape": "^4.9.0"
   }
